Fix page overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -99,8 +99,8 @@ body {
 #green-gradient {
   /* green-gradient */
   position: absolute;
-  left: -0;
-  top: 40%;
+  left: 5%;
+  bottom: 0%;
   filter: blur(100px);
   border-radius: 200px;
 }
